test/libhyperion/syntaxTests/inlineAssembly/invalid/pc_disallowed.hyp
contract C {
	function f() pure public {
		assembly {
			pop(pc())
		}
	}
}
// ----
// SyntaxError 2450: (61-63): PC instruction is a low-level QRVM feature. Because of that PC is disallowed in strict assembly.
